# bob_wxo_hackathon

./: .gitignore  AGENTS.md  DEPLOYMENT_INSTRUCTIONS.md  HACKATHON.md  README.md  agent_ideas_brainstorm.md  deploy_direct_api.sh  deploy_final.sh  deploy_test_agent.py  deploy_with_curl.sh  env.example  implementation_plan.md  main.py  pyproject.toml
agents/: test2_agent.yaml  test_agent.yaml
connections/: test2_app.yaml  test_app.yaml
docs/: implementation_plan.md
mcp/: mcp.json
my-wxo-agent/: project_layout.md
scripts/: deploy.sh
skills/wxo-adk-agent/: SKILL.md
skills/wxo-adk-agent/examples/agentic_memory/: create_patient_support_ticket.py  import_all.sh  st_marys_hospitals_agent.yaml
skills/wxo-adk-agent/examples/customer_care/: readme.md
skills/wxo-adk-agent/examples/ibm_knowledge/: import_all_dynamic_mode.sh  readme.md  remove_all_dynamic_mode.sh
skills/wxo-adk-agent/examples/personal_banking/: README.md  TESTER_README.md  TRANSFER_MONEY_SPEC.md  account_list.json  contacts.json  delete_astra_table.sh  import-all.sh  (+3 more)
skills/wxo-adk-agent/references/: agent_collaborator.yaml  deploy_recipe.md  evaluation_recipe.md  evaluation_template.json  tool_template.py  yaml_schema.md
starter/: INSTALL.md  env.example  requirements.txt
tools/: goodbye_world.py  hello_world.py
wxo-adk-agent/: HACKATHON.md  SKILL.md
wxo-adk-agent/references/: agent_manager.yaml  connection_basic_auth.yaml  connection_oauth.yaml  pitfalls.md  remote_setup.md  tool_template.py  tool_test_template.py
wxo-adk-agent/starter/: env.example  project_layout.md
(+23 files in other folders)
